# sexyparse

./: CMakeLists.txt  README.md
.github/workflows/: ci.yml
include/sexyparse/: maybe.hpp  parse_error.hpp  sexyparse.hpp
include/sexytime/: parse_error.hpp  sexytime.hpp
test/source/: maybe_tests.cpp  parse_error_tests.cpp  tests.cpp
test/source/maybe/: bool_conversion_tests.cpp  constructor_tests.cpp  error_conversion_tests.cpp  map_tests.cpp  reference_conversion_tests.cpp  unwrap_tests.cpp  value_conversion_tests.cpp
